<resources>
    <string name="app_name">PEC3App</string>

    <string name="tv_Maps">Maps</string>
    <string name="tv_Museums">Museums</string>
    <string name="tv_Contacts">Contacts</string>
    <string name="tv_Quizzes">Quizzes</string>
    <string name="tv_Settings">Settings</string>
    <string name="tv_Help">Help</string>


    <string name="iv_Maps">Map Icon</string>
    <string name="iv_Museums">Museum Icon</string>
    <string name="iv_Contacts">Contacts Icon</string>
    <string name="iv_Quizzes">Quizzes Icon</string>
    <string name="iv_Settings">Settings Icon</string>
    <string name="iv_Help">Help Icon</string>
    <string name="title_activity_maps2">Map</string>

</resources>
