<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1">


                <RelativeLayout
                    android:id="@+id/rellay_Maps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/red"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Map"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Maps"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_map_black_48dp" />

                        <TextView
                            android:id="@+id/tv_Maps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Map"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Maps" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rellay_Museums"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/yellow"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Museums"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Museums"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/baseline_museum_black_18dp" />

                        <TextView
                            android:id="@+id/tv_Museums"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Museums"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Museums" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/rellay_Contacts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/lime">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Contacts"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Contacts"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_account_circle_black_48dp" />

                        <TextView
                            android:id="@+id/tv_Contacts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Contacts"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Contacts" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rellay_Quizzes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/green">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Quizzes"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Quizzes"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_live_help_black_48dp" />

                        <TextView
                            android:id="@+id/tv_Quizzes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Quizzes"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Quizzes" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <RelativeLayout
                    android:id="@+id/rellay_Settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/blue">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Settings"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Settings"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_settings_black_48dp" />

                        <TextView
                            android:id="@+id/tv_Settings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Settings"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Settings" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rellay_Help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/purple"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_Help"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_Help"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:tint="@color/white"
                            app:srcCompat="@drawable/ic_help_black_48dp" />

                        <TextView
                            android:id="@+id/tv_Help"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/iv_Help"
                            android:layout_centerHorizontal="true"
                            android:clickable="false"
                            android:text="@string/tv_Help" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>